@@ -4,10 +4,17 @@ glade_DATA = vinagre.glade
 uidir = $(datadir)/vinagre
 ui_DATA = vinagre-ui.xml
 
+@INTLTOOL_DESKTOP_RULE@
+
 desktopdir       = $(datadir)/applications
 desktop_in_files = vinagre.desktop.in
 desktop_DATA     = $(desktop_in_files:.desktop.in=.desktop)
-@INTLTOOL_DESKTOP_RULE@
+
+@INTLTOOL_XML_RULE@
+
+MIMEFILES = vinagre-mime.xml.in
+mimedir = $(datadir)/mime/packages
+mime_DATA = vinagre-mime.xml
 
 CLEANFILES = \
 	$(desktop_DATA)
@@ -16,3 +23,25 @@ EXTRA_DIST = \
 	$(glade_DATA) \
 	$(ui_DATA) \
 	$(desktop_in_files)
+
+UPDATE_MIME = \
+        if [ -f $(DESTDIR)$(datadir)/mime/packages/freedesktop.org.xml ] ; then \
+                if which update-mime-database>/dev/null 2>&1; then \
+                        update-mime-database $(DESTDIR)$(datadir)/mime; \
+                fi \
+        fi
+
+UPDATE_DESKTOP = \
+        if [ -f $(DESTDIR)$(datadir)/applications/defaults.list ] ; then \
+                if which update-desktop-database>/dev/null 2>&1 ; then \
+                        update-desktop-database; \
+                fi \
+        fi
+
+install-data-hook: 
+	$(UPDATE_MIME)
+	$(UPDATE_DESKTOP)
+
+uninstall-hook: 
+	$(UPDATE_MIME)
+	$(UPDATE_DESKTOP)
