@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+	<mime-type type="application/x-vnc">
+		<sub-class-of type="text/plain"/>
+		<_comment>Remote Desktop (VNC) file</_comment>
+		<glob pattern="*.vnc"/>
+	</mime-type>
+</mime-info>
