@@ -26,6 +26,9 @@
       <separator/>
       <menuitem name="MachineCloseMenu" action="MachineClose"/>
       <menuitem name="MachineTakeScreenshotMenu" action="MachineTakeScreenshot"/>
+      <placeholder name="FileRecentsPlaceholder">
+        <separator/>
+      </placeholder>
       <separator/>
       <menuitem name="MachineCloseAllMenu" action="MachineCloseAll"/>
       <menuitem name="MachineQuitMenu" action="MachineQuit"/>
