@@ -1,9 +1,9 @@
 [Desktop Entry]
-Encoding=UTF-8
 _Name=Remote Desktop Viewer
 _Comment=Access remote desktops
-Exec=vinagre
+Exec=vinagre %U
 Icon=gnome-remote-desktop.png
+MimeType=application/x-vnc;
 Terminal=false
 Type=Application
 StartupNotify=true
