@@ -2,6 +2,7 @@
 
 data/vinagre.desktop.in.in
 data/vinagre.glade
+data/vinagre-mime.xml.in
 data/vinagre-ui.xml
 src/vinagre-commands.c
 src/vinagre-connect.c
