@@ -1,5 +1,11 @@
 2007-10-04  Jonh Wendell <jwendell@gnome.org>
 
+	* lots of files:
+	  - Keep recent connections around
+	  - Other minor changes
+
+2007-10-04  Jonh Wendell <jwendell@gnome.org>
+
 	* configure.ac,
 	* data/vinagre.glade,
 	* src/vinagre-tab.c:
